--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buen día!</title>
-    <link rel="stylesheet" href="src/styles.css">
-    <link rel="stylesheet" href="src/modal.css">
-    <link rel="shortcut icon" href="img/logo.png">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="modal.css">
+    <link rel="shortcut icon" href="logo.png">
 </head>
 <body>
     <div class="contenedor">
@@ -57,7 +57,7 @@
                     </button>
                   </header>
                   <section class="modal-content">
-                      <img src="img/meme.jpg" alt="">
+                      <img src="meme.jpg" alt="">
                   </section>
   
                 </div>
@@ -80,8 +80,9 @@
         <div class="burbuja"></div>
         <div class="burbuja"></div>
     </div>
-    <script src="src/js.js"></script>
-    <script src="src/modal.js"></script> 
+    <script src="js.js"></script>
+    <script src="modal.js"></script> 
 </body>
 </html>
+
 
