--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </p>
         </class>
         <div>
-            <img src="img/imagen.png" width="30%" >
+            <img src="imagen.png" width="30%" >
             <br>
         </div>
         <div class="energia">Mensaje para el amor de mi vida☺♥... ¿Querés leer?</div> 
@@ -84,5 +84,6 @@
     <script src="modal.js"></script> 
 </body>
 </html>
+
 
 
