--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
             <img src="imagen.png" width="30%" >
             <br>
         </div>
-        <div class="energia">Mensaje para el amor de mi vida☺♥... ¿Querés leer?</div> 
-            <button id="yesBtn" class="bn-neon open-modal" data-open="modal1">SI</button>
-
+        <div class="energia">¿Querés saber una cosa?♥</div> 
+            <button id="yesBtn" class="bn-neon open-modal" data-open="modal1">SÍ</button>
               <div class="modal" id="modal1" data-animation="slideInOutLeft">
                 <div class="modal-dialog">
                   <header class="modal-header">
@@ -36,11 +35,14 @@
                     </button>
                   </header>
                   <section class="modal-content">
-                    <h3>65656</h3><hr><hr>
+                    <h3>Quizá no pueda ver tu reacción, pero si sonreís con este mensajito,
+						mi cora latirá con alegría. Que este día esté lleno de alegría 
+						para vos, mi amor. 
+						Te quiero ❤️</h3><hr><hr>
                   </section>
                   <footer class="modal-footer">
                     <button type="button" class="open-modal bn-neon" id="yesBtn"
-    			style="display: flex; justify-content: center; align-items: center; 				height: 100px; padding: 0 80px;margin-left:center;">
+    			style="display: flex; justify-content: center; align-items: center; height: 100px; padding: 0 80px;margin-left:center;">
     			
 		    </button>
                   </footer>
@@ -83,4 +85,5 @@
     <script src="js.js"></script>
     <script src="modal.js"></script> 
 </body>
+
 </html>
