--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
                 </header>
 
                 <section class="modal-content">
-                    <h3>
+                    <p class="modal-texto">
                         Quizá no pueda ver tu reacción, pero si sonreís con este mensajito,
                         mi cora latirá con alegría. Que este día esté lleno de alegría
                         para vos, mi amor.
                         Te quiero ❤️
-                    </h3>
+                    </p>
                     <hr><hr>
                 </section>
 
@@ -120,5 +120,6 @@
 
 </body>
 </html>
+
 
 
