--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@
             <br>
         </div>
 
-        <div class="energia">¿Querés saber una cosa?♥</div>
+        <div class="energia" style="color: white; font-size: 1.7rem; font-weight: 600; text-shadow: 1px 1px 3px black;">
+    ¿Querés saber una cosa?♥
+</div>
+
 
         <!-- Botón SÍ -->
         <button id="yesBtn" class="bn-neon open-modal" data-open="modal1">SÍ</button>
@@ -133,6 +136,7 @@
 
 </body>
 </html>
+
 
 
 
